docs improvements and additions

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     <footer>
         <span>SIMCAP · Gesture Recognition from IMU Data</span>
         <div class="footer-links">
-            <a href="https://github.com/christopherdebeer/simcap">GitHub</a>
+            <a href="https://github.com/<redacted>/simcap">GitHub</a>
             <a href="https://www.puck-js.com/">Puck.js</a>
         </div>
     </footer>
