Update handCanvas styles for 3D support

--- a/src/web/GAMBIT/collector.html
+++ b/src/web/GAMBIT/collector.html
@@ -620,7 +620,7 @@
             color: var(--warning);
         }
 
-        #handCanvas { max-width: 100%;}
+        #handCanvas, #handCanvas3D { max-width: 100%;}
 
         /* Calibration Diagnostics Styles */
         .cal-diagnostics {
