--- a/src/web/GAMBIT/collector.html
+++ b/src/web/GAMBIT/collector.html
@@ -9,12 +9,15 @@
     <!-- Eruda Dev Console for Mobile Debugging -->
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
+    <!-- TensorFlow.js for ML inference -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0/dist/tf.min.js"></script>
     <script src="puck.js"></script>
     <script src="gambit-client.js"></script>
     <script src="calibration.js"></script>
     <script src="hand-model.js"></script>
     <script src="hand-3d-renderer.js"></script>
     <script src="filters.js"></script>
+    <script src="gesture-inference.js"></script>
     <link rel="stylesheet" href="../../simcap.css">
     <!-- Gallaudet ASL Font -->
     <style>
